kubernetes/apps/home-automation/speedtest-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.0.0.5
          - 8.8.8.8
        searches:
          - speedtest-tracker.svc.cluster.local
        options:
          - name: ndots
            value: "5"
      containers:
        - name: speedtest-tracker
          image: ghcr.io/alexjustesen/speedtest-tracker:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              subPath: speedtest-tracker
              name: unraid-storage
      volumes:
        - name: unraid-storage
          persistentVolumeClaim:
            claimName: unraid-pvc
