kubernetes/apps/home-automation/speedtest-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: speedtest-tracker
spec:
  ingressClassName: internal
  rules:
  - host: speedtest.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: speedtest-tracker
            port:
              number: 80
